# nwb-video-widgets

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: all_os_versions.txt  all_python_versions.txt  assess-file-changes.yml  auto-publish.yml  deploy-tests.yml  testing.yml  tests.yml
documentation/design/: intro.md  issue_duplicate_pose_names.md  neurosift_pattern_migration.md  neurosift_pose_migration.md
documentation/design/pose_estimation_widget/: intro.md  timestamp_seeking.md
documentation/design/video_widget/: dandi_video_resolution.md  intro.md  local_video_serving.md  timestamp_based_seeking.md  video_synchronization.md
notebooks/: dandi_example_notebook.ipynb  example_notebook.ipynb  local_example_notebook.ipynb  widget_notebook.ipynb
src/nwb_video_widgets/: __init__.py  _utils.py  dandi_pose_widget.py  dandi_video_widget.py  local_pose_widget.py  local_video_widget.py  pose_widget.css  pose_widget.js  pose_widget.py  video_widget.css  video_widget.js  video_widget.py
src/nwb_video_widgets/testing/: synthetic_nwb.py
tests/: __init__.py  conftest.py  test_dandi_video_widget.py  test_local_pose_widget.py  test_local_video_widget.py  test_utils.py
tests/fixtures/: __init__.py  synthetic_nwb.py  synthetic_video.py
tests/fixtures/videos/: README.md  stub_mjpeg.avi
tests/integration/: __init__.py  test_dandi_path_construction.py  test_local_roundtrip.py
